# midi-et-demi

./: .gitignore  .gitmodules  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  README.md  SPEC-sample-editor.md  SPEC.md  UI-SPEC.md  run.sh
src/app/: Main.cpp
src/domain/: LoopClip.h  MidiMap.h  Transport.h
src/engine/: AudioEngine.cpp  AudioEngine.h  Metronome.h  PluginHost.cpp  PluginHost.h  SineSynth.h  Track.cpp  Track.h
src/ui/: ChannelStrip.h  LoopLanes.h  MainComponent.cpp  MainComponent.h  MappingWindow.h  PadWindow.h  PluginEditorWindow.h  SampleBrowser.h
tests/: loopclip_tests.cpp  midimap_tests.cpp  transport_tests.cpp
